--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.4
   google_sign_in: ^5.4.2
+  flutter_login_facebook: ^1.7.0
 
 dev_dependencies:
   flutter_test:
