--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^5.4.2
   flutter_login_facebook: ^1.7.0
   envied: ^0.3.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
